# lattice-theory-parallel-programming-uni.lu

./: .gitignore
4-Abstract_Interpreter/: CMakeLists.txt  div_by_zero.txt  ex3_easy4.txt  ex3_easy5.txt  test_equational_1.txt  test_equational_2.txt  test_equational_3.txt
4-Abstract_Interpreter/include/: ActionSemantics.hpp  DisjointRangeSet.hpp  InvariantStore.hpp  ValueInterval.hpp  abstract_interpreter.hpp  ast.hpp  parser.hpp
4-Abstract_Interpreter/src/: abstract_fixpoint_interpreter.cpp  abstract_interpreter.cpp  main.cpp  main2.cpp
4-Abstract_Interpreter/tests/: div_by_zero.c  overflow_test.c  test_equational_1.c  test_equational_2.c  test_equational_3.c  test_loop_bounded.c  test_loop_infinite.c  test_loop_unbounded.c
4-Abstract_Interpreter/tests_out/: overflow_test.txt  test_equational_1.txt  test_equational_2.txt  test_equational_3.txt
